--- a/.gitignore
+++ b/.gitignore
@@ -220,11 +220,11 @@ $RECYCLE.BIN/
 *-debug.log
 *-error.log
 /.nyc_output
+**/.DS_Store
+/.idea
 /dist
-/lib
-/package-lock.json
 /tmp
-node_modules
+/node_modules
 oclif.manifest.json
 
 # Test-generated resources
