--- a/package.json
+++ b/package.json
@@ -2,80 +2,74 @@
   "name": "@forward-software/react-native-toolbox",
   "version": "3.0.0",
   "description": "A set of scripts to simplify React Native development",
-  "author": "ForWarD Software (https://github.com/Forward-Software)",
+  "author": "ForWarD Software (https://github.com/forwardsoftware)",
   "license": "MPL-2.0",
-  "repository": "https://github.com/forward-software/react-native-toolbox",
+  "repository": "https://github.com/forwardsoftware/react-native-toolbox",
   "keywords": [
     "react-native",
     "scripts",
     "utils",
     "development"
   ],
-  "homepage": "https://github.com/forward-software/react-native-toolbox#readme",
-  "bugs": {
-    "url": "https://github.com/forward-software/react-native-toolbox/issues"
-  },
-  "publishConfig": {
-    "access": "public"
+  "homepage": "https://github.com/forwardsoftware/react-native-toolbox#readme",
+  "bugs": "https://github.com/forwardsoftware/react-native-toolbox/issues",
+  "scripts": {
+    "cleanup": "rimraf android/ ios/ dist/ .nyc_output/ oclif.manifest.json .env",
+    "build": "rimraf dist && tsc -b",
+    "lint": "eslint",
+    "postpack": "rimraf oclif.manifest.json",
+    "posttest": "pnpm run lint",
+    "prepack": "oclif manifest && oclif readme",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif readme && git add README.md"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=18.0.0"
   },
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "/bin",
-    "/dist",
-    "/npm-shrinkwrap.json",
-    "/oclif.manifest.json"
+    "./bin",
+    "./dist",
+    "./oclif.manifest.json"
   ],
+  "bin": {
+    "rn-toolbox": "./bin/run.js"
+  },
   "oclif": {
     "bin": "rn-toolbox",
     "dirname": "rn-toolbox",
     "commands": "./dist/commands",
     "plugins": [
       "@oclif/plugin-help"
-    ]
+    ],
+    "topicSeparator": " "
   },
-  "scripts": {
-    "cleanup": "shx rm -rf android/ ios/ dist/ .nyc_output/ oclif.manifest.json .env",
-    "lint": "eslint . --ext .ts --config .eslintrc",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "posttest": "yarn lint",
-    "build": "shx rm -rf dist && tsc -b",
-    "version": "oclif readme && git add README.md",
-    "prepack": "yarn build && oclif manifest && oclif readme",
-    "postpack": "shx rm -f oclif.manifest.json"
-  },
-  "bin": {
-    "rn-toolbox": "./bin/run"
-  },
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "dependencies": {
-    "@oclif/core": "^1",
-    "@oclif/plugin-help": "^5",
-    "chalk": "^4.0.0",
+    "@oclif/core": "^4",
+    "@oclif/plugin-help": "^6",
     "listr": "^0.14.3",
-    "sharp": "^0.30.7"
+    "sharp": "^0.33.5",
+    "yoctocolors": "^2.1.1"
   },
   "devDependencies": {
-    "@oclif/test": "^2",
+    "@eslint/compat": "^1",
+    "@oclif/prettier-config": "^0.2.1",
+    "@oclif/test": "^4",
     "@types/chai": "^4",
-    "@types/listr": "^0.14.2",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.45",
-    "@types/sharp": "^0.30.4",
+    "@types/listr": "^0.14.9",
+    "@types/mocha": "^10",
+    "@types/node": "^18",
     "chai": "^4",
-    "eslint": "^7.32.0",
-    "eslint-config-oclif": "^4",
-    "eslint-config-oclif-typescript": "^1.0.2",
-    "globby": "^11",
-    "mocha": "^9",
-    "nyc": "^14",
-    "oclif": "^2",
-    "shx": "^0.3.3",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
-  },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+    "eslint": "^9",
+    "eslint-config-oclif": "^6",
+    "eslint-config-prettier": "^10",
+    "mocha": "^10",
+    "oclif": "^4",
+    "rimraf": "^6",
+    "ts-node": "^10",
+    "typescript": "^5"
+  }
 }
