chore: update `release-please` configuration
Do not include component name in tags since we release a single package

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,8 @@
   "release-type": "node",
   "always-update": true,
   "packages": {
-    ".": {}
+    ".": {
+      "include-component-in-tag": false
+    }
   }
 }
