--- a/package.json
+++ b/package.json
@@ -50,16 +50,14 @@
   "dependencies": {
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
-    "listr": "^0.14.3",
-    "sharp": "^0.34.1",
-    "yoctocolors": "^2.1.1"
+    "ansis": "^3.17.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4",
     "@types/chai": "^5",
-    "@types/listr": "^0.14.9",
     "@types/mocha": "^10",
     "@types/node": "^22",
     "chai": "^5",
