--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,20 +3,52 @@
   "configurations": [
     {
       "type": "node",
-      "request": "attach",
-      "name": "Attach",
-      "port": 9229,
-      "skipFiles": ["<node_internals>/**"]
+      "request": "launch",
+      "name": "Execute `dotenv` Command",
+      "skipFiles": ["<node_internals>/**"],
+      "runtimeExecutable": "node",
+      "runtimeArgs": [
+        "--loader",
+        "ts-node/esm",
+        "--no-warnings=ExperimentalWarning"
+      ],
+      "program": "${workspaceFolder}/bin/dev.js",
+      "args": ["dotenv", "dev"]
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Execute Command",
+      "name": "Execute `icons` Command",
       "skipFiles": ["<node_internals>/**"],
       "runtimeExecutable": "node",
-      "runtimeArgs": ["--loader", "ts-node/esm", "--no-warnings=ExperimentalWarning"],
+      "runtimeArgs": [
+        "--loader",
+        "ts-node/esm",
+        "--no-warnings=ExperimentalWarning"
+      ],
       "program": "${workspaceFolder}/bin/dev.js",
-      "args": ["hello", "world"]
+      "args": ["icons", "./test/assets/icon.png", "--appName", "TestApp"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Execute `splash` Command",
+      "skipFiles": ["<node_internals>/**"],
+      "runtimeExecutable": "node",
+      "runtimeArgs": [
+        "--loader",
+        "ts-node/esm",
+        "--no-warnings=ExperimentalWarning"
+      ],
+      "program": "${workspaceFolder}/bin/dev.js",
+      "args": ["splash", "./test/assets/splashscreen.png", "--appName", "TestApp"]
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach",
+      "port": 9229,
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
